# EventManager_by_Light_Bulb

./: README.md
event-frontend/src/: App.jsx
event-frontend/src/components/: Navbar.jsx
event-frontend/src/pages/: AdminPage.jsx  CreateEventPage.jsx  EditEventPage.jsx  EventDetailPage.jsx  LoginPage.jsx  MyRegistrationsPage.jsx
event-manager/: events.db  main.py  models.py  pyproject.toml
event-manager/routers/: auth.py  events.py  registrations.py
